Self-code review minor adjustments

--- a/GreekKino/GreekKino/Resources/Strings/Localizable.xcstrings
+++ b/GreekKino/GreekKino/Resources/Strings/Localizable.xcstrings
@@ -38,6 +38,17 @@
         }
       }
     },
+    "MissingFeature" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "This feature is yet to be added."
+          }
+        }
+      }
+    },
     "NextRounds" : {
       "extractionState" : "manual",
       "localizations" : {
